# Automated-Email-Analysis

./: .gitignore  README.md  data_analysis.py  email_automation.py  pyproject.toml  requirements.txt
data/: dataset.csv
logs/: analysis_results.txt
