[tool.poetry]
name = "automated-email-analysis"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "automated_email_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
